:bug: Fix: white-space wrap in code element

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -135,6 +135,7 @@
     @include link(false, false);
 
     a {
+      white-space: normal;
       @include overflow-wrap(break-word);
 
       [theme='dark'] & b,
